--- a/Forge.Security.Jwt.Shared.csproj
+++ b/Forge.Security.Jwt.Shared.csproj
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net5.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;netcoreapp3.1;net6.0</TargetFrameworks>
 		<Version>1.0.2.1</Version>
 		<Copyright>Copyright © Zoltan Juhasz, 2022</Copyright>
 		<Description>Forge Security Jwt models</Description>
@@ -16,12 +16,12 @@
 		<Company>Forge Project Contributor(s)</Company>
 		<PackageId>Forge.Security.Jwt.Shared</PackageId>
 		<Authors>Zoltan Juhasz</Authors>
-		<AssemblyVersion>1.0.2.1</AssemblyVersion>
+		<AssemblyVersion>1.0.2.2</AssemblyVersion>
 		<Title>Forge Security Jwt Shared</Title>
 		<SignAssembly>true</SignAssembly>
-		<AssemblyOriginatorKeyFile>..\..\.Documents\Forge.pfx</AssemblyOriginatorKeyFile>
+		<AssemblyOriginatorKeyFile>..\.Documents\Forge.pfx</AssemblyOriginatorKeyFile>
 		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-		<ProjectGuid>{FB543FC2-FE76-4E08-B9F6-97F97A671479}</ProjectGuid>
+		<ProjectGuid>{A0658202-6E8C-4BB7-B5F1-52E7F3B6EDDA}</ProjectGuid>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -30,22 +30,22 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.0" />
+	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.30" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.32" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.17" />
+	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.32" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.10" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.12" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0' or '$(TargetFramework)' == 'net6.0'">
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
 		<SupportedPlatform Include="browser" />
 	</ItemGroup>
 
