--- a/Forge.Security.Jwt.Shared.csproj
+++ b/Forge.Security.Jwt.Shared.csproj
@@ -28,12 +28,17 @@
 		<Authors>Zoltan Juhasz</Authors>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<RepositoryType>git</RepositoryType>
-		<AssemblyVersion>1.6.3.0</AssemblyVersion>
+		<AssemblyVersion>1.7.0.0</AssemblyVersion>
 		<Version>$(AssemblyVersion)</Version>
 		<FileVersion>$(AssemblyVersion)</FileVersion>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<PackageTags>jwt, security, authentication, authorization, sso, blazor</PackageTags>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <None Remove="Forge.Security.Jwt.Shared.csproj.vspscc" />
+	  <None Remove="Forge.Security.Jwt.Shared.xml" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
@@ -60,11 +65,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="..\LICENSE">
+		<None Include="LICENSE">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
-		<None Include="..\README.md">
+		<None Include="README.md">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
