--- a/Forge.Security.Jwt.Shared.csproj
+++ b/Forge.Security.Jwt.Shared.csproj
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;netcoreapp3.1;net6.0;net7.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;netcoreapp3.1;net6.0;net7.0;net8.0</TargetFrameworks>
 		<SignAssembly>true</SignAssembly>
 		<AssemblyOriginatorKeyFile>..\.Documents\Forge.pfx</AssemblyOriginatorKeyFile>
 		<ProjectGuid>{A0658202-6E8C-4BB7-B5F1-52E7F3B6EDDA}</ProjectGuid>
@@ -20,7 +20,6 @@
 		<Company>Forge Project Contributor(s)</Company>
 		<Copyright>Copyright © Zoltan Juhasz, 2022-2023</Copyright>
 		<PackageId>Forge.Security.Jwt.Shared</PackageId>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Title>Forge Security Jwt Shared</Title>
 		<Description>Forge Security Jwt models</Description>
 		<PackageProjectUrl>https://github.com/JZO001/Forge.Security.Jwt.Shared</PackageProjectUrl>
@@ -28,13 +27,17 @@
 		<Authors>Zoltan Juhasz</Authors>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<RepositoryType>git</RepositoryType>
-		<AssemblyVersion>1.7.0.0</AssemblyVersion>
+		<AssemblyVersion>1.7.1.0</AssemblyVersion>
 		<Version>$(AssemblyVersion)</Version>
 		<FileVersion>$(AssemblyVersion)</FileVersion>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<PackageTags>jwt, security, authentication, authorization, sso, blazor</PackageTags>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)' == 'Release'">
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+	</PropertyGroup>
+	
 	<ItemGroup>
 	  <None Remove="Forge.Security.Jwt.Shared.csproj.vspscc" />
 	  <None Remove="Forge.Security.Jwt.Shared.xml" />
@@ -60,7 +63,11 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.0" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0' or '$(TargetFramework)' == 'net7.0'">
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.0" />
+	</ItemGroup>
+	
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0' or '$(TargetFramework)' == 'net7.0' or '$(TargetFramework)' == 'net8.0'">
 		<SupportedPlatform Include="browser" />
 	</ItemGroup>
 
